<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.tate.loginfbla.LoginActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/prompt_email"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:id="@+id/txl"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txl"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColor"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/prompt_password"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:id="@+id/tx2"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:layout_below="@+id/email"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx2"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            />
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/login_bn_label"
         style="?android:textAppearanceSmall"
         android:textStyle="bold"
         android:layout_below="@+id/password"
         android:layout_marginTop="35dp"
         android:id="@+id/login_button"
         android:background="@drawable/button_selector"
         android:textColor="@color/textColor"
         />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:id="@+id/sign_up"

            />

    </RelativeLayout>

</LinearLayout>
