<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.example.tate.loginfbla.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name2"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:id="@+id/textView" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/prompt_name"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:id="@+id/txl"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txl"
            android:textColor="@color/textColor"
            android:id="@+id/reg_name"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/prompt_email"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:id="@+id/tx2"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:layout_below="@id/reg_name"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx2"
            android:textColor="@color/textColor"
            android:id="@+id/reg_email"
            android:inputType="textEmailAddress"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/prompt_password"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:id="@+id/tx3"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:layout_below="@id/reg_email"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx3"
            android:textColor="@color/textColor"
            android:id="@+id/reg_password"
            android:inputType="textPassword"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/prompt_con_password"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            android:id="@+id/tx4"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:layout_below="@id/reg_password"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx4"
            android:textColor="@color/textColor"
            android:id="@+id/reg_con_password"
            android:inputType="textPassword"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_bn_label"
            style="?android:textAppearanceSmall"
            android:textColor="@color/textColor"
            android:id="@+id/reg_button"
            android:layout_below="@id/reg_con_password"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_selector"
            android:textStyle="bold"
            />

    </RelativeLayout>

</LinearLayout>
